app/assets/stylesheets/custom.css.less
/* ... */
.sidebar {
nav ul li {
a {
    color: #aaa; letter-spacing:2px; padding-left:20px;

.active { background-color: #3f3f3f;}
&:hover { background-color:@charcoal;}
}
}
.dashboard-nav {
    min-height:200px;
ul li { border-left: 5px solid #ccc;}
}
.rules-ui-nav ul li {
&:first-child {
     border-left: 10px solid @bugs-primary;
&:active {
     background-color:#819499;
a { color:#c4e7ed;}
}
}
&:nth-child(2) { border-left: 10px solid @users-primary;}
&:nth-child(3) { border-left: 10px solid @users-primary;}
&:nth-child(4) { border-left: 10px solid @search-primary;}
}
}
.sidebar-footer {
    margin-bottom: 20px;
p {
    font-size:0.7em; color:#666; margin-bottom:0; padding-left: 0; padding-right:5px;
a { color:#777;}
}
}
.sidebar-search{margin: 6px 0px -6px 47px; padding: 0px 10px 0px 10px;}
.nav--active { transform: translate(0px, 0px); -webkit-transform: translateX(0px);}
.shifted--right { transform: translate(200px, 0px); -webkit-transform: translateX(200px);}
.shifted--left { transform: translate(-200px, 0px); -webkit-transform: translateX(-200px);}
.shifted--right .container {padding-right:220px;}


/* ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ */

/*   Tables   */

/* ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ @ ~ */


.item-ids-column {
    min-height:717px; margin-left:0; margin-right:0; padding-left:0; padding-right:0; color:@off-black;
    position:absolute; width:170px; z-index:20;
.index-table {
    width: 100%;
    margin-top:12px;
thead {
    font-size: 12px;
tr {
td {vertical-align:bottom; padding-top:14px; padding-right:30px;}
}
}
tbody {
tr {
    height: 60px; text-overflow:hidden;
td {vertical-align: top; padding-right:30px;}
}
}
}
}
.item-details-column {
    min-height:717px; margin-left:0; margin-right:0; padding-right:0; background-color: @paper;
    position:absolute; padding-left:170px; z-index:10; width:100%;
.table.index-table {
    width: 100%;  border-bottom: 1px solid @light-gray;
thead {
    font-size: 12px; //background-color:@extra-light-gray;
tr {
td {
    vertical-align:bottom; padding-top: 9.5px;
&:first-child {padding-left: 30px;}
&:last-child {padding-right:15px;}
}
}
}
tbody {
tr {
    height: 60px; text-overflow:hidden;
td {
    vertical-align: top;
&:first-child { padding-left: 30px;}
&:last-child {padding-right:15px;}
}
}
}

}
.item-info { padding-left:35px; padding-top:0;}
}

.table-title { font-family:"Lane - Upper", Arial, Helvetica, sans-serif; font-size:40px; margin: 0 26px 0 28px;}
.table-condensed th { font-size:14px;}

/* Bugs Page */
.bugs-page {
    background-color:@paper; padding:0;
.item-ids-column {
    background-color:@bugs-primary;
.index-table {
    border-bottom: 1px solid darken(@bugs-primary, 10%);
tbody {
tr {
&:hover { background-color:darken(@bugs-primary, 5%);}
td {
    max-width: 100px; text-overflow:ellipsis; overflow: hidden; white-space: nowrap; border-top: 1px solid darken(@bugs-primary, 10%);
//&.active { border-right:1px solid darken(@bugs-primary, 5%); background-color: darken(@bugs-primary, 5%); }
&.active { border-right:1px solid @paper; background-color: @paper; }
}
}
}
}
.col-pagination {background:@bugs-primary;}
.pagination {
li a {
    color:@paper; background:darken(@bugs-primary, 5%);border:none; border-bottom: 1px solid @bugs-primary;
:hover { color:@paper;}
}
li.active a {
    color:@paper; background-color:@charcoal;
&:hover { background-color:@off-black;}
}
}
}
.item-details-column {
.index-table {
    border-bottom:1px solid @light-gray;
tbody {
tr {
&:hover { background-color:@extra-light-gray;}
td {
&:first-child { height:60px; overflow:hidden; text-overflow:ellipsis; white-space: nowrap; max-width:500px; margin-right:20px;}
.bug-link.active { color:@bugs-primary; background:@paper; border-right:1px solid @paper;}
.bug-user {
    max-width: 80px; text-overflow:ellipsis; overflow: hidden; white-space: nowrap;
a:hover, a:active, a:focus { color: @bugs-primary; text-decoration:none;}
}
}
}
}
}
.bug-rule-content {
    background:@light-gray; margin-top: 20px;
tbody tr { background:@paper; }
}
}
.multiselect-checkboxes { list-style: none;}
.back-btn:hover {
.back-triangle:after { background-color:@bugs-primary;}
}
.nav-tabs {
a, li.active a { font-size:12px; color:@charcoal;}
}
a { color: @charcoal;}
.bug-actions{opacity:.5;}
.bug-user:hover > .bug-actions{opacity:0.9;}
.bug-actions:hover { text-decoration:underline;}

.stats-box table {
    background:#efefef; margin-left:0; margin-right:0;
tbody tr td { height:20px; color:@charcoal; font-size:11px; border:none; padding: 8px 8px 8px 25px;}
}
tr.editing { background:@extra-light-gray; }
td.edit-btn {
i {  font-size:20px; line-height:18px; }
a {
    color: darken(@bugs-primary,20%);
&:hover { color:@bugs-primary;}
}
}
}


/* Users Page */
.users-page {
    color:@charcoal; background-color:@paper; padding:0;
.item-ids-column {
    background-color:@users-primary; height: 100%; min-height:717px; padding:0;
.col-pagination {background:@users-primary;}
.pagination {
li a {
    color:@charcoal; background:darken(@users-primary, 5%);border:none; border-bottom: 1px solid @users-primary;
:hover { color:@paper;}
}
li.active a { color:#fff6e9; background-color:@charcoal;}
}
.index-table {
    margin-top: 3.3em;
    border-bottom: 1px solid darken(@users-primary, 10%);
tbody {
tr {
&:hover { background-color:darken(@users-primary, 2%);}
td {
    max-width: 100px; text-overflow:ellipsis; overflow: hidden; white-space: nowrap; border-top: 1px solid darken(@users-primary, 10%);
&.active { border-right:1px solid @paper; background-color: @paper; }
}
}
}
}
}
.item-details-column {
.index-table {
tbody {
tr {
    height:60px;
&:hover { background-color:@extra-light-gray;}
td {
    border-bottom: 1px solid @light-gray;
}
}
}
}
}
.back-btn:hover {
.back-triangle:after { background-color:@users-primary;}
}
.tabs-content { min-height: 100px;}
ul.nav-tabs { margin:12px;}
}
/* ... */

